--- a/app/src/main/res/layout/activity_add_link.xml
+++ b/app/src/main/res/layout/activity_add_link.xml
@@ -1,76 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddLinkActivity">
 
-
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_marginTop="?attr/actionBarSize"
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
 
-        <EditText
-            android:id="@+id/nazwaLinku"
-
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_link_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="88dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            tools:layout_editor_absoluteX="75dp"
-            tools:layout_editor_absoluteY="128dp" />
+            android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/urlL"
+            <EditText
+                android:id="@+id/nazwaLinku"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:ems="10"
+                android:hint="Nazwa strony"
+                android:inputType="textPersonName"
+                android:textSize="30sp" />
+        </android.support.design.widget.TextInputLayout>
 
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_link_address"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="196dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            tools:layout_editor_absoluteX="65dp"
-            tools:layout_editor_absoluteY="218dp" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            <EditText
+                android:id="@+id/urlL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Adres strony"
+                android:inputType="textPersonName"
+                android:singleLine="true"
+                android:textSize="30sp" />
+        </android.support.design.widget.TextInputLayout>
 
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="100dp"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="150dp"
-            android:text="Adres strony"
-            android:textSize="30dp"
-            tools:layout_editor_absoluteX="75dp"
-            tools:layout_editor_absoluteY="85dp" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="97dp"
-            android:layout_marginLeft="97dp"
-            android:layout_marginTop="38dp"
-            android:text="Nazwa strony"
-            android:textSize="30dp"
-            tools:layout_editor_absoluteX="74dp"
-            tools:layout_editor_absoluteY="182dp" />
-
-    </RelativeLayout>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
