add and delete note with random title

--- a/app/src/main/res/layout/activity_voice_notes_list.xml
+++ b/app/src/main/res/layout/activity_voice_notes_list.xml
@@ -69,7 +69,7 @@
                 android:textSize="30dp"
                 android:textAllCaps="false"
                 android:textStyle="bold"
-                android:text="@string/newS"
+                android:text="@string/usun"
                 android:id="@+id/voice_notes_button_delete"
                 />
         </LinearLayout>
