--- a/app/src/main/res/layout/activity_add_voice_note.xml
+++ b/app/src/main/res/layout/activity_add_voice_note.xml
@@ -6,91 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".VoiceNotes.AddVoiceNoteActivity">
 
-        <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_note_title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="3"
-            android:padding="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_height="wrap_content">
 
-            <android.support.v7.widget.CardView
+            <EditText
+                android:id="@+id/note_title_input"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:cardCornerRadius="4dp"
-                android:layout_weight="1"
-                android:layout_marginBottom="10dp"
-                android:layout_gravity="center"
-                app:cardUseCompatPadding="true"
-                app:cardPreventCornerOverlap="true"
-                app:cardElevation="5dp">
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:ems="10"
+                android:hint="Tytuł notatki"
+                android:inputType="text"
+                android:textSize="30sp" />
+        </android.support.design.widget.TextInputLayout>
 
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="nagrywaj"
-                    android:textSize="25dp"
-                    android:padding="20dp"
-                    android:textAllCaps="false"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:id="@+id/start_recording"
-                    />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:layout_marginTop="8dp"
+            android:text="@string/start_recording"
+            android:textSize="25dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:id="@+id/record_action"
+            />
 
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:cardCornerRadius="4dp"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_gravity="center"
-                app:cardUseCompatPadding="true"
-                app:cardPreventCornerOverlap="true"
-                app:cardElevation="5dp">
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textAllCaps="false"
-                    android:text="Koniec nagrania"
-                    android:textSize="25dp"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:id="@+id/stop_recording"
-                    />
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:cardCornerRadius="4dp"
-                android:layout_weight="1"
-                android:layout_marginTop="10dp"
-                android:layout_gravity="center"
-                app:cardUseCompatPadding="true"
-                app:cardPreventCornerOverlap="true"
-                app:cardElevation="5dp">
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Zapisz"
-                    android:textSize="25dp"
-                    android:textColor="@color/black"
-                    android:padding="20dp"
-                    android:textAllCaps="false"
-                    android:id="@+id/save_record"
-                    android:textStyle="bold"/>
-            </android.support.v7.widget.CardView>
-
-        </LinearLayout>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
