--- a/app/src/main/res/layout/activity_new_alarm.xml
+++ b/app/src/main/res/layout/activity_new_alarm.xml
@@ -4,72 +4,98 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AlarmClock.NewAlarmActivity">
+    tools:context=".AlarmClock.NewAlarmActivity"
+    android:paddingLeft="6dip"
+    android:paddingTop="70dip"
+    android:paddingRight="6dip">
 
     <RelativeLayout
-        android:layout_width="337dp"
-        android:layout_height="360dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="152dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal">
 
         <LinearLayout
+            android:paddingLeft="6dip"
+            android:paddingRight="6dip"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+            <Button
+                android:id="@+id/leftalarm_button"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_centerInParent="true"
+                android:layout_marginBottom="10dp"
+                android:onClick="setFocusLeft"
+                android:rotation="270"
+                android:background="@drawable/shape_triangle"
+                />
             <EditText
                 android:id="@+id/editText2"
-                android:layout_width="55dp"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/editText"
                 android:ems="10"
+                android:gravity="center"
                 android:inputType="number"
                 android:digits="012"
                 android:maxLength="1" />
 
             <EditText
                 android:id="@+id/editText"
-                android:layout_width="55dp"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:digits="0123456789"
                 android:layout_alignParentLeft="true"
                 android:ems="10"
-
+                android:gravity="center"
                 android:inputType="number"
                 android:maxLength="1"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="112dp" />
+                />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="20sp"
                 android:text=":" />
 
             <EditText
                 android:id="@+id/editText5"
-                android:layout_width="55dp"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:gravity="center"
                 android:digits="012345"
                 android:inputType="number"
                 android:maxLength="1" />
 
             <EditText
                 android:id="@+id/editText7"
-                android:layout_width="55dp"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
+                android:gravity="center"
                 android:digits="0123456789"
                 android:inputType="number"
                 android:maxLength="1" />
+            <Button
+                android:id="@+id/rightalarm_button"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:onClick="setFocusRight"
+                android:layout_marginBottom="10dp"
+                android:rotation="90"
+                android:background="@drawable/shape_triangle" />
+
 
         </LinearLayout>
 
     </RelativeLayout>
+
 
 </android.support.constraint.ConstraintLayout>
