--- a/app/src/main/res/layout/link_cell.xml
+++ b/app/src/main/res/layout/link_cell.xml
@@ -6,7 +6,7 @@
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
-    android:id="@+id/notes_list_cell">
+    android:id="@+id/links_list_cell">
 
 
     <android.support.v7.widget.CardView
