--- a/app/src/main/res/layout/activity_rwlinks.xml
+++ b/app/src/main/res/layout/activity_rwlinks.xml
@@ -25,12 +25,13 @@ android:id="@+id/rwlinks_background">
 
     </android.support.v7.widget.RecyclerView>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:id="@+id/rwlinks_buttons_layout"
         android:orientation="horizontal"
-        android:weightSum="3"
+        android:weightSum="2"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         >
@@ -39,15 +40,13 @@ android:id="@+id/rwlinks_background">
             android:layout_height="80dp"
             android:layout_weight="1"
             android:textSize="30dp"
+            android:textAllCaps="false"
             android:layout_marginRight="0dp"
             android:layout_marginLeft="0dp"
-            android:textAllCaps="false"
             android:textStyle="bold"
-            android:text="@string/delete"
+            android:text="Usuń"
             android:id="@+id/rwlinks_button_delete"
             />
-
-
 
         <Button
             android:layout_width="match_parent"
@@ -56,13 +55,16 @@ android:id="@+id/rwlinks_background">
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:textSize="30dp"
-            android:textAllCaps="false"
             android:textStyle="bold"
             android:text="Otwórz"
+            android:textAllCaps="false"
+            android:background="@color/green"
             android:id="@+id/rwlinks_button_open"
             />
     </LinearLayout>
 
 
 </RelativeLayout>
+
+
 </android.support.constraint.ConstraintLayout>
