sms messager three tasks from doc

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="orangeTransparent50Proc">#4DFF6E00</color>
     <color name="yellow">#FFFF50</color>
     <color name="redColor">#FF0000</color>
-
+    <color name="green2Transparent50Proc">#4D00FF00</color>
 
     <!--FF85D585- niebieski: 7dc2ff-->
 </resources>
