--- a/app/src/main/res/layout/sms_received_cell.xml
+++ b/app/src/main/res/layout/sms_received_cell.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:textSize="25sp"
         android:textColor="@color/black"
+        android:textStyle="bold"
         android:layout_marginLeft="10dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="4dp" />
@@ -41,7 +42,7 @@
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:layout_marginLeft="4dp"
         app:layout_constraintTop_toBottomOf="@id/text_message_body_receive" />
 </android.support.constraint.ConstraintLayout>
