--- a/app/src/main/res/layout/sms_send_cell.xml
+++ b/app/src/main/res/layout/sms_send_cell.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:textSize="25sp"
         android:textColor="@color/black"
+        android:textStyle="bold"
         android:layout_marginLeft="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -43,7 +44,7 @@
         android:text="11:40"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:layout_marginRight="4dp"
         android:textColor="@color/black"
         app:layout_constraintRight_toRightOf="parent"
