--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -5,7 +5,8 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".AlarmClock.AlarmActivity">
+tools:context=".AlarmClock.AlarmActivity"
+    android:background="@color/lightBlue2">
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -17,55 +18,45 @@ tools:context=".AlarmClock.AlarmActivity">
     android:layout_marginBottom="10dp"
     android:layout_marginTop="10dp"
     android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp">
+    android:layout_marginRight="10dp"
+   >
 
 
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_note_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+           >
 
             <TextView
                 android:id="@+id/time_of_alarm"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="212dp"
                 android:layout_alignParentTop="true"
                 android:ems="10"
+                android:gravity="center_vertical|center_horizontal"
                 android:text="09:09"
-                android:textSize="60sp"
-                android:gravity="center"
-                android:textColor="@color/green"/>
+                android:textColor="@color/black"
+                android:textSize="60sp" />
         </android.support.design.widget.TextInputLayout>
 
 
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="4dp"
-        android:layout_weight="1"
-        android:textAllCaps="false"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_gravity="center"
-        app:cardUseCompatPadding="true"
-        app:cardPreventCornerOverlap="true"
-        app:cardElevation="5dp">
+
 
         <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAllCaps="false"
-            android:textSize="50sp"
-            android:text="WYŁĄCZ"
-            android:textColor="@color/green"
-            android:background="@color/greenTransparent50Proc"
-            android:onClick="cancelAlarm"
             android:id="@+id/button_stop_alarm"
-            />
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
 
-    </android.support.v7.widget.CardView>
+            android:onClick="cancelAlarm"
+            android:text="Wyłącz"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textSize="50sp"
+            android:background="@drawable/roundedbutton"/>
+
 
 
 
