--- a/app/src/main/res/layout/activity_links.xml
+++ b/app/src/main/res/layout/activity_links.xml
@@ -28,9 +28,9 @@
             android:layout_width="173dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:onClick="openAdres"
+
             android:layout_marginBottom="0dp"
-            android:text="@string/wybierz"
+            android:text="llll"
             android:textSize="30dp"
             android:textStyle="bold" />
 
