--- a/app/src/main/res/layout/activity_new_alarm.xml
+++ b/app/src/main/res/layout/activity_new_alarm.xml
@@ -40,6 +40,7 @@
                 android:gravity="center"
                 android:inputType="number"
                 android:digits="012"
+                android:textSize="40dp"
                 android:maxLength="1" />
 
             <EditText
@@ -51,6 +52,7 @@
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="number"
+                android:textSize="40dp"
                 android:maxLength="1"
                 />
 
@@ -60,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textSize="20sp"
+                android:textSize="40sp"
                 android:text=":" />
 
             <EditText
@@ -71,12 +73,14 @@
                 android:gravity="center"
                 android:digits="012345"
                 android:inputType="number"
+                android:textSize="40dp"
                 android:maxLength="1" />
 
             <EditText
                 android:id="@+id/editText7"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:textSize="40dp"
                 android:layout_weight="1"
                 android:ems="10"
                 android:gravity="center"
