--- a/app/src/main/res/layout/activity_list_contact.xml
+++ b/app/src/main/res/layout/activity_list_contact.xml
@@ -42,6 +42,7 @@
                 android:layout_height="80dp"
                 android:layout_weight="1"
                 android:text="@string/delete_contact"
+                android:textAllCaps="false"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -52,6 +53,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:text="@string/edit"
+                android:textAllCaps="false"
                 android:id="@+id/contact_button_edit" />
 
             <Button
@@ -60,6 +62,7 @@
                 android:layout_weight="1"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:textAllCaps="false"
                 android:text="@string/call_to_contact_number"
                 android:id="@+id/contact_button_call" />
 
@@ -70,6 +73,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:text="@string/wybierz"
+                android:textAllCaps="false"
                 android:id="@+id/contact_button_choose"
                 android:visibility="gone"/>
         </LinearLayout>
