--- a/app/src/main/res/layout/activity_navigation_list_.xml
+++ b/app/src/main/res/layout/activity_navigation_list_.xml
@@ -40,6 +40,7 @@
                 android:layout_height="80dp"
                 android:layout_weight="1"
                 android:text="@string/delete"
+                android:textAllCaps="false"
                 android:textSize="20sp"
                 android:textStyle="bold" />
             
@@ -49,6 +50,7 @@
                 android:layout_height="80dp"
                 android:layout_weight="1"
                 android:text="Edytuj"
+                android:textAllCaps="false"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -58,7 +60,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:layout_weight="1"
-                android:text="PROWADZ"
+                android:text="Prowadź"
+                android:textAllCaps="false"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
