--- a/app/src/main/res/layout/activity_new_sms.xml
+++ b/app/src/main/res/layout/activity_new_sms.xml
@@ -38,6 +38,8 @@
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:textSize="20dp"
+                android:textAllCaps="false"
+                android:textStyle="bold"
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_weight="1"
