--- a/app/src/main/res/layout/link_cell.xml
+++ b/app/src/main/res/layout/link_cell.xml
@@ -29,10 +29,12 @@
             <TextView
                 android:id="@+id/links_name"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="80dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:text="Nazwa notatki"
+                android:lines="2"
+                android:gravity="center_vertical"
                 android:textColor="@color/black"
                 android:textSize="28sp"
                 android:textStyle="bold" />
