--- a/app/src/main/res/layout/navigation_list_item.xml
+++ b/app/src/main/res/layout/navigation_list_item.xml
@@ -31,7 +31,7 @@
                 android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:text="Adres miejsca"
                 android:textColor="@color/black"
                 android:textSize="28sp"
@@ -40,11 +40,12 @@
             <TextView
                 android:id="@+id/navigation_address"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_height="70dp"
+                android:layout_marginBottom="5dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:singleLine="true"
+                android:layout_marginTop="-10dp"
+                android:lines="2"
                 android:text="Adres"
                 android:textColor="@color/black"
                 android:textSize="26sp" />
