--- a/app/src/main/res/layout/voice_notes_cell.xml
+++ b/app/src/main/res/layout/voice_notes_cell.xml
@@ -29,9 +29,11 @@
             <TextView
                 android:id="@+id/notes_name"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="80dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:lines="2"
+                android:gravity="center_vertical"
                 android:text="Nazwa notatki"
                 android:textColor="@color/black"
                 android:textSize="28sp"
