--- a/app/src/main/res/layout/activity_voice_notes_list.xml
+++ b/app/src/main/res/layout/activity_voice_notes_list.xml
@@ -31,7 +31,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="3">
 
             <Button
                 android:id="@+id/voice_notes_button_delete"
@@ -56,6 +56,19 @@
                 android:textAllCaps="false"
                 android:textSize="30dp"
                 android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/button_edit_notes"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
+                android:layout_weight="1"
+                android:text="@string/edit"
+                android:textAllCaps="false"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+
 
         </LinearLayout>
 
