alarms colors and push buttons colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="yellow">#FFFF50</color>
     <color name="redColor">#FF0000</color>
     <color name="green2Transparent50Proc">#4D00FF00</color>
+    <color name="redColor2">#4DFF0000</color>
 
     <!--FF85D585- niebieski: 7dc2ff-->
 </resources>
