--- a/app/src/main/res/layout/activity_list_contact.xml
+++ b/app/src/main/res/layout/activity_list_contact.xml
@@ -63,6 +63,16 @@
                 android:textSize="26dp"
                 android:textStyle="bold" />
 
+            <Button
+                android:id="@+id/contact_button_select"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_weight="3"
+                android:text="Wybierz"
+                android:textAllCaps="false"
+                android:textSize="26dp"
+                android:textStyle="bold"
+                android:visibility="gone"/>
         </LinearLayout>
 
     </RelativeLayout>
